--- a/static/review/css/review.css
+++ b/static/review/css/review.css
@@ -93,12 +93,14 @@ body {
   }
   .sub{
     background-color: #4CAF50;
+    border-radius: 8px;
+    margin-top: 10px;
     color: #4CAF50;
     padding: 12px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    float: right;
+    
 
   }
   .sub hover {
@@ -113,12 +115,13 @@ body {
       overflow: scroll;
     }
     
+    
   }
+
+ 
   #feedbackTable {
     font-family: Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-    
+    width: 90%;
   }
   
   #feedbackTable td, #feedbackTable th {
@@ -134,7 +137,7 @@ body {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: center;
-    background-color: #4CAF50;
+    background-color: #035504;
     color: white;
   }
 
