--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -1,6 +1,132 @@
 
+html {
+  box-sizing: border-box;
+}
+body{
+    background-color: rgb(212, 209, 209);
+    font-size: x-large;
+    color: #000;
+    padding: none;
+    
+}
+.bodyMain {
+    background-image: url("earth.jpg");
+    background-color: #c0bbbb;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    margin-top: none;
+}
+
+.textSp{
+  width:50%;
+  height: 600px;
+  color: rgb(0, 0, 0);
+  font-size: larger;
+  text-align: left;
+  overflow: auto;
+}
+.textRo{
+  width:50%;
+  height: 600px;
+  color: rgb(7, 7, 7);
+  font-size: larger;
+  text-align: left;
+  overflow: auto;
+}
+.textFl{
+  width:50%;
+  height: 600px;
+  color: rgb(0, 0, 0);
+  font-size: larger;
+  text-align: left;
+  overflow: auto;
+}
+.textIt{
+    width:50%;
+    height: 600px;
+    color: rgb(0, 0, 0);
+    font-size: larger;
+    text-align: left;
+    overflow: auto;
+}
+.textUk{
+  width: 50%;
+  height: 600px;
+  color: rgb(0, 0, 0);
+  font-size: larger;
+  text-align: left;
+  overflow: auto;
+}
+.textNl{
+  width: 50%;
+  height: 600px;
+  color: rgb(0, 0, 0);
+  font-size: larger;
+  text-align: left;
+  overflow: auto;
+}
+.textIr{
+    width: 50%;
+    height: 600px;
+    color: rgb(0, 0, 0);
+    font-size: larger;
+    text-align: left;
+    overflow: auto;
+}
+.header h1{
+    text-align: left;
+    
+    font-size: 50px;
+    font-style: italic;
+    color: rgb(0, 0, 0);
+    margin-bottom: 40px;
+    margin-left: 120px;
+
+}
+.header h2{
+    text-align: left;
+    font-size: 50px;
+    font-style: italic;
+    color: rgb(0, 0, 0);
+    margin-bottom: 40px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+#slider, #sliderUk, #sliderSp, #sliderNl, #sliderFl, #sliderIt, #sliderIr {
+    border-radius: 300px;
+    z-index: 1;
+    
+}
+#prev{
+    size: 50px;
+    color: white;
+    background-color: green;
+    z-index: 1;
+    
+}
+#next{
+    size: 80px;
+    color: white;
+    background-color: green;
+    z-index: 1;
+}
+
+a{
+  color: red;
+  font-weight: bold;
+  font-style: italic;
+}
+p{
+  text-align: center;
+  font-weight: bold;
+  color: rgb(25, 21, 224);
+}
 /* for large screens and up */
 @media (min-width: 1300px) {
+  
   .bodyRo .bodySp .bodyUk .bodyFl .bodyIr .bodyIt .bodyNl {
     width: 100%;
     height: 100%;
@@ -84,7 +210,7 @@
   }
 }
 
-@media (max-width:1299px) and (min-width:601px) {
+@media (min-width:601px) {
   .bodyRo{
     height: auto;
     width: auto;
@@ -133,7 +259,7 @@
   .textSp{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -141,7 +267,7 @@
   .textRo{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -149,7 +275,7 @@
   .textFl{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -157,7 +283,7 @@
   .textIt{
       width:50%;
       height: 600px;
-      color: white;
+      color: rgb(0, 0, 0);
       font-size: larger;
       text-align: left;
       overflow: auto;
@@ -165,7 +291,7 @@
   .textUk{
     width: 50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -173,7 +299,7 @@
   .textNl{
     width: 50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -181,7 +307,7 @@
   .textIr{
       width: 50%;
       height: 600px;
-      color: white;
+      color: rgb(0, 0, 0);
       font-size: larger;
       text-align: left;
       overflow: auto;
@@ -237,7 +363,7 @@
   .textSp{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -245,7 +371,7 @@
   .textRo{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -253,7 +379,7 @@
   .textFl{
     width:50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -261,7 +387,7 @@
   .textIt{
       width:50%;
       height: 600px;
-      color: white;
+      color: rgb(0, 0, 0);
       font-size: larger;
       text-align: left;
       overflow: auto;
@@ -269,7 +395,7 @@
   .textUk{
     width: 50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -277,7 +403,7 @@
   .textNl{
     width: 50%;
     height: 600px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: larger;
     text-align: left;
     overflow: auto;
@@ -285,134 +411,10 @@
   .textIr{
       width: 50%;
       height: 600px;
-      color: white;
+      color: rgb(0, 0, 0);
       font-size: larger;
       text-align: left;
       overflow: auto;
   }
 }
 
-html {
-  box-sizing: border-box;
-}
-body{
-    background: linear-gradient(90deg, rgb(226, 101, 101), rgb(3, 71, 110));
-    font-size: x-large;
-    color: #000;
-    padding: none;
-    
-}
-.bodyMain {
-    background-image: url("earth.jpg");
-    background-color: #cccccc;
-    height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    margin-top: none;
-}
-
-.textSp{
-  width:50%;
-  height: 600px;
-  color: white;
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textRo{
-  width:50%;
-  height: 600px;
-  color: white;
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textFl{
-  width:50%;
-  height: 600px;
-  color: white;
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textIt{
-    width:50%;
-    height: 600px;
-    color: white;
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-}
-.textUk{
-  width: 50%;
-  height: 600px;
-  color: white;
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textNl{
-  width: 50%;
-  height: 600px;
-  color: white;
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textIr{
-    width: 50%;
-    height: 600px;
-    color: white;
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-}
-.header h1{
-    text-align: center;
-    width: 100%;
-    float: left;
-    font-size: 50px;
-    font-style: italic;
-    color: white;
-    margin-bottom: 40px;
-}
-.header h2{
-    text-align: left;
-    width: 100%;
-    text-indent: 60px;
-    font-size: 50px;
-    font-style: italic;
-    color: white;
-    margin-bottom: 40px;
-}
-#slider, #sliderUk, #sliderSp, #sliderNl, #sliderFl, #sliderIt, #sliderIr {
-    border-radius: 300px;
-    z-index: 1;
-    
-}
-#prev{
-    size: 50px;
-    color: white;
-    background-color: green;
-    z-index: 1;
-    
-}
-#next{
-    size: 80px;
-    color: white;
-    background-color: green;
-    z-index: 1;
-}
-
-a{
-  color: red;
-  font-weight: bold;
-  font-style: italic;
-}
-p{
-  text-align: center;
-  font-weight: bold;
-  color: aqua;
-}
