--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -5,7 +5,6 @@ html {
 body{
     background-color: rgb(212, 209, 209);
     font-size: x-large;
-    color: #000;
     padding: none;
     
 }
@@ -81,7 +80,7 @@ body{
     
     font-size: 50px;
     font-style: italic;
-    color: rgb(0, 0, 0);
+    color: rgb(245, 234, 234);
     margin-bottom: 40px;
     margin-left: 120px;
 
@@ -90,7 +89,7 @@ body{
     text-align: left;
     font-size: 50px;
     font-style: italic;
-    color: rgb(0, 0, 0);
+    color: rgb(250, 240, 240);
     margin-bottom: 40px;
     margin-left: 100px;
     margin-right: 100px;
@@ -122,7 +121,7 @@ a{
 p{
   text-align: center;
   font-weight: bold;
-  color: rgb(25, 21, 224);
+  color: rgb(14, 86, 241);
 }
 /* for large screens and up */
 @media (min-width: 1300px) {
@@ -133,7 +132,7 @@ p{
     border: 1px solid transparent;
     position: relative;
     display: inline-flex;
-    
+        
   }
   .Romania .Spain  .America  .Italy  {
     width: 70%;
@@ -211,6 +210,14 @@ p{
 }
 
 @media (min-width:601px) {
+  .header h1{
+    margin-left: 100px;
+    
+  }
+  .header h2{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
   .bodyRo{
     height: auto;
     width: auto;
@@ -315,6 +322,14 @@ p{
 }
 
 @media only screen and (max-width: 600px){
+  .header h1{
+    margin-left: 50px;
+    
+  }
+  .header h2{
+    margin-left: 50px;
+    margin-right: 50px;
+  }
   .bodyRo{
     height: auto;
     width: auto;
