--- a/static/dropdown/dropdown-menu.css
+++ b/static/dropdown/dropdown-menu.css
@@ -15,7 +15,7 @@
     padding: 15px;
     border-radius: 30px;
 }
-.fa-linkedin-in
+.fa-linkedin-in, .fa-envelope, .fa-info-circle
 {
     color: red;
     font-size: 40px;
