--- a/static/game/css/game.css
+++ b/static/game/css/game.css
@@ -1,3 +1,18 @@
+#home {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  float:left;
+    
+}
+.fa-home {
+  color: red;
+  font-size: 40px;
+  background: transparent;
+  border: none;
+  padding: 15px;
+  border-radius: 30px;
+}
 body{
   background-color: rgb(223, 213, 241);
 }
@@ -13,9 +28,9 @@ body{
 }
 #text{
   padding-top: 100px;
-  text-align: center;
-  margin-right: 80px;
-  margin-left: 80px;
+  
+  margin-right: 25%;
+  margin-left: 25%;
   font-size: 30px;
 }
 
