--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -1,4 +1,18 @@
-
+#home {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  float:left;
+    
+}
+.fa-home {
+  color: red;
+  font-size: 40px;
+  background: transparent;
+  border: none;
+  padding: 15px;
+  border-radius: 30px;
+}
 html {
   box-sizing: border-box;
 }
