--- a/static/what-is/css/what-is.css
+++ b/static/what-is/css/what-is.css
@@ -1,3 +1,18 @@
+#home {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  float:left;
+    
+}
+.fa-home {
+  color: red;
+  font-size: 40px;
+  background: transparent;
+  border: none;
+  padding: 15px;
+  border-radius: 30px;
+}
 body{
     margin-left: 50px;
     margin-right: 50px;
@@ -22,6 +37,14 @@ h1{
     text-align: center;
     font-size: 30px;
     font-weight: bold;
+    padding-bottom: 100px;
+    
+}
+#quote{
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    font-style: oblique;
 }
 #image{
     
@@ -37,15 +60,26 @@ h1{
 }
 #text {
     margin-top: 50px;
-    align-self: center;
     margin-left: 160px;
     margin-right: 160px;
     font-size: 30px;
     font-weight: bolder;
-    padding-bottom: 10px;
+    padding-bottom: 30px;
     color:white;
-    line-height: 1.8;
-    letter-spacing: 3px;
+    line-height: 1.2;
+    letter-spacing: 2px;
+}
+#statement{
+  color: #000;
+  font-size: 30px;
+  text-indent: 50px;
+  margin-left: 150px;
+  margin-right: 150px;
+  font-weight: bold;
+  font-style: normal;
+}
+#statement p{
+  padding-bottom: 30px;
 }
 
 
@@ -65,19 +99,25 @@ h1{
 }
 
 @media (max-width:767px) {
+  #image{
+    max-width: 200px;
+    text-align: center;
+  }
  #id {
     padding-top: 25px;
     padding-bottom: 10px;
     margin-left: 20px;
     margin-right: 20px;
   }
-  #text{
-      font-size: medium;
-     
+  #quote{
+    font-style: italic;
+
   }
-  #text {
+  #statement{
+    color: #000;
+  }
+  #text, #quote {
     margin-top: 30px;
-    align-self: center;
     margin-left: 60px;
     margin-right: 60px;
     font-size: 15px;
