--- a/static/what-is/css/what-is.css
+++ b/static/what-is/css/what-is.css
@@ -1,141 +1,62 @@
-#home {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  float:left;
-    
-}
-.fa-home {
-  color: red;
-  font-size: 40px;
-  background: transparent;
-  border: none;
-  padding: 15px;
-  border-radius: 30px;
-}
-body{
-    margin-left: 50px;
-    margin-right: 50px;
-    background-color: rgb(167, 149, 149);
-    
-}
-h2{
-    margin-left: 100px;
-    font-size: 50px;
-    font-weight: 900;
-    color:#000;
-}
-h1{
-    background-color: #a38205;
-    text-align:center ;
-    font-size: 80px;
-    color: wheat;
-    padding-top: 50px;
-    padding-bottom: 50px;
+body{    
+  background-color: rgb(167, 149, 149);    
 }
 #refference {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    padding-bottom: 100px;
-    
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  padding-bottom: 100px;    
 }
 #quote{
-    text-align: left;
-    font-size: 30px;
-    font-weight: bold;
-    font-style: oblique;
+  text-align: left;
+  font-size: 30px;
+  font-weight: bold;
+  font-style: oblique;
+}
+
+#container {
+width: 100%;
+margin: 0 auto;
+display: inline-block;  
+}
+
+#statement, .text, #refference, #image, #ds{
+width: 70%;  
+margin: 40px;
+
+min-height: 1px;
+margin-right: 10%;
+float: right;
 }
 #image{
-    
-    background-repeat: no-repeat;
-    background-size: cover;
-    text-align: center;
-    width: auto;
-    height: auto;
-    margin-right: 20px;
-    margin-left: 20px;
-    
-    
+ background-size: cover;
+ text-align: center;
 }
-#text {
-    margin-top: 50px;
-    margin-left: 160px;
-    margin-right: 160px;
-    font-size: 30px;
-    font-weight: bolder;
-    padding-bottom: 30px;
-    color:white;
-    line-height: 1.2;
-    letter-spacing: 2px;
+.statement, .text{
+ text-align: left;   
+ font-size: 30px;
+ letter-spacing: 2px;
+ line-height: 1.8;
+ color: white;
+ 
 }
-#statement{
-  color: #000;
-  font-size: 30px;
-  text-indent: 50px;
-  margin-left: 150px;
-  margin-right: 150px;
-  font-weight: bold;
-  font-style: normal;
+h2{
+ color: black;
+ font-weight: bold;
+ text-align: left;
+ margin-left: 10%;
+ margin-bottom: 10%;
+ font-size: 40px;
 }
-#statement p{
-  padding-bottom: 30px;
+#ds{
+  text-align: center;
+  font-size: 50px;
+  color: rgb(27, 41, 53);
+}
+#refference{
+ text-align: center;
+ color: black;
+ font-size: 30px;
 }
 
 
-@media (max-width: 1200px) {
-  #ds {
-    padding-top: 75px;
-    padding-bottom: 50px;
-    
-  }
-}
-
-@media (max-width:992px) {
-  #id {
-    padding-top: 55px;
-    padding-bottom: 25px;
-  }
-}
-
-@media (max-width:767px) {
-  #image{
-    max-width: 200px;
-    text-align: center;
-  }
- #id {
-    padding-top: 25px;
-    padding-bottom: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  #quote{
-    font-style: italic;
-
-  }
-  #statement{
-    color: #000;
-  }
-  #text, #quote {
-    margin-top: 30px;
-    margin-left: 60px;
-    margin-right: 60px;
-    font-size: 15px;
-    font-weight: bolder;
-    padding-bottom: 10px;
-    color:white;
-    line-height: 0.9;
-    letter-spacing: 2px;
-}
-
-  h2{
-    margin-left: 50px;
-    font-size: 30px;
-    font-weight: 900;
-    color:#000;
-}
-
-    #ds{
-        font-size:30px ;
-    }
-}
