--- a/static/contact/css/contact.css
+++ b/static/contact/css/contact.css
@@ -3,43 +3,20 @@
     margin: 0;
     box-sizing: border-box;
 }
-#home {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    float:left;
-      
-  }
-  .fa-home {
-    color: red;
-    font-size: 40px;
-    background: transparent;
-    border: none;
-    padding: 15px;
-    border-radius: 30px;
-  }
 
 body{
     font-family: 'Montserrat';
-    background-color: rgb(214, 168, 168);
+    background-color: aliceblue;
+    display: block;
 }
 section{
     height: 100vh;
     width: 100%;
     background-color: aliceblue;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
     flex-direction: column;
 }
 
-#contact{
-    text-align: center;
-    font-size: 50px;
-    font-weight: bolder;
-    padding-top: 20px;
-    background-color: rgb(214, 168, 168);
-}
 .container{
     width: 90%;
     max-width: 500px;
@@ -48,7 +25,9 @@ section{
     box-shadow: 0px 0px 20px #000;
     background-color: rgb(243, 142, 142);
     border-radius: 8px;
-    margin-bottom: 20px;
+    margin-bottom: 10%;
+    margin-top: 15%;
+       
 }
 .form-group{
     width: 100%;
@@ -104,6 +83,7 @@ button[type="submit"]:hover{
     background-color: rgb(182, 63, 17);
     color: white;
 }
+
 @keyframes status{
     0%{
         opacity: 1;
