--- a/static/review/css/review.css
+++ b/static/review/css/review.css
@@ -1,51 +1,16 @@
-#about p {
-    text-indent: 50px;
-    text-align: left;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-    font-style: italic;
-    font-size: larger;
-    z-index: 1;
-}
-#review h2{
+
+#review{
     text-align: center;
     color: #000;
-    font-size: xx-large;
-    text-decoration: underline;
-    font-weight: bold;
+    font-size: 7vh;
+   font-weight: bold;
     
 }
 
 body {
-    margin: 10px solid black;
-    font-family: Arial, Helvetica, sans-serif;
-    background: linear-gradient(90deg, rgb(63, 63, 145), rgb(207, 87, 87));
-  }
-  
-  .image {
-    background-image: url("plane.jpg");
-    background-color: #cccccc;
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-  }
-  
-  .text {
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
-    font-style: italic;
-    font-size: 30px;
- }
-  a{
-    color: white;
-  }
+    background-color: aliceblue;
+    display: block;
+  } 
 
 
 * {
@@ -67,10 +32,12 @@ body {
   
  .container {
     border-radius: 5px;
-    background-color: #f2f2f2;
+    background-color: #d3d1d1;
     padding: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 20%;
+    margin-right: 20%;
+    width: 60%;
+
   }
   
   .col-25 {
@@ -114,14 +81,19 @@ body {
       margin-top: 0;
       overflow: scroll;
     }
-    
+    #feedbackTable{
+      font-size: 1vh;
+      color: #000;
+    }
     
   }
 
  
   #feedbackTable {
     font-family: Arial, Helvetica, sans-serif;
-    width: 90%;
+    width: 70%;
+    margin-left: 15%;
+    margin-right: 15%;
   }
   
   #feedbackTable td, #feedbackTable th {
@@ -141,25 +113,18 @@ body {
     color: white;
   }
 
-  #contact h1{
-      text-align: center;
-      padding-top: 2px;
-      font-size: xx-large;
-      font-weight: bold;
-      font-style: italic;
-      color: black;
-      background: none;
-  }
-  #fb h2{
-      font-size: xx-large;
+  
+  #fb {
+      font-size: 3vh;
       color: #000;
       text-align: center;
-      text-decoration: underline;
+      margin-top: 100px;
   }
   #feedbackTable{
     margin: 100px auto;
     margin-bottom: 100px;
   }
+  
   
 
 
