--- a/static/what-is/css/what-is.css
+++ b/static/what-is/css/what-is.css
@@ -1,3 +1,4 @@
+
 body{    
   background-color: rgb(167, 149, 149);    
 }
@@ -5,7 +6,7 @@ body{
   text-align: center;
   font-size: 30px;
   font-weight: bold;
-  padding-bottom: 100px;    
+  padding-bottom: 20px;    
 }
 #quote{
   text-align: left;
@@ -22,8 +23,7 @@ display: inline-block;
 
 #statement, .text, #refference, #image, #ds{
 width: 70%;  
-margin: 40px;
-
+margin: 20px;
 min-height: 1px;
 margin-right: 10%;
 float: right;
@@ -57,6 +57,23 @@ h2{
  text-align: center;
  color: black;
  font-size: 30px;
+}
+
+@media screen and (max-width: 600px){
+  h2, #ds{
+    font-size: 6vw;
+    }
+  .statement, .text{
+    letter-spacing: 0.5px;
+    line-height: 0.9;
+    text-align: left;
+    font-size: 4vw;
+        
+  }
+  #quote, #refference{
+     font-size: 4vw;
+   } 
+
 }
 
 
