--- a/static/game/css/game.css
+++ b/static/game/css/game.css
@@ -4,19 +4,28 @@ body{
   width: 100%;
 }
 #image{
-  text-align: center;
   margin-top: 50px;
   margin-bottom: 50px;
-  margin-left: 15%;
-  margin-right: 15%;
-  width: 70%;
+  margin-right: 20%;
+  margin-left: 20%;
+  width: 60%;
+  height: 600px;
   background-size: cover;
+}
+.map-list{
+  margin-left: 10%;  
+}
+.caption{
+  color: black;
 }
 #header{
   font-size: 50px;
   padding-top: 50px;
   text-align: center;
   color: rgb(243, 181, 181);
+  font-weight: bold;
+}
+#title{
   font-weight: bold;
 }
 .text{
@@ -56,8 +65,125 @@ body{
     padding-top: 25px;
     font-size: 24px;
   }
+  #image{
+    height: 300px;
+  }
+  .text{
+    font-size: 15px;
+    letter-spacing: 1px;
+    line-height: 1;
+
+  }
+  #header{
+    font-size: 30px;
+  }
+}
+.slideshow {
+  width: 800px;
+  margin: 0 auto;
+  overflow: hidden;
+  border: none;
+  height: 500px;
 }
 
+
+.item {
+  display: flex;
+  width: 800px;
+  align-items:center;
+}
+  
+.slideshow-container {
+  width: 5600px;
+  transition: 1s ease;
+  display: flex;
+  background-color: transparent;
+  margin-bottom: 100px;
+}
+
+
+
+.slideshow-container:hover {
+  animation-play-state: paused;
+}
+
+.slide {
+  animation: slide 24s ease infinite;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(0%);
+  }
+  7.07% {
+    transform: translateX(0);
+  }
+  14.14% {
+    transform: translateX(-14.28%);
+  }
+  21.21% {
+    transform: translateX(-14.28%);
+  }
+  28.28% {
+    transform: translateX(-28.56%);
+  }
+  35.35% {
+    transform: translateX(-28.56%);
+  }
+  42.42% {
+    transform: translateX(-42.84%);
+  }
+  56.56% {
+    transform: translateX(-42.84%);
+  }
+  63.63% {
+    transform: translateX(-57.12%);
+  }
+  70.7% {
+    transform: translateX(-57.12%);
+  }
+  77.77% {
+    transform: translateX(-71.4%);
+  }
+  84.84% {
+    transform: translateX(-71.4%);
+  }
+  91.91% {
+    transform: translateX(-85.68%);
+  }
+  99.98% {
+    transform: translateX(-85.68%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+} 
+
+.item img {
+  width: 60%;
+  background-size: cover;
+  
+}
+
+.item .caption {
+  width: 40%;
+  color: rgb(12, 11, 11);
+  margin-left: 5%;
+  
+  
+}
+
+@media screen and (max-width: 800px){
+.slideshow {
+  width: 100%; 
+
+}  
+   
+.slideshow-container {
+  width: 700%;
+ }
+
+}
 .team-boxed .intro {
   font-size: 16px;
   max-width: 500px;
@@ -72,25 +198,25 @@ body{
   padding: 50px 0;
 }
 
-.team-boxed .item {
+.team-boxed .person {
   text-align: center;
 }
 
-.team-boxed .item .box {
+.team-boxed .person .box {
   text-align: center;
   padding: 30px;
   background-color: #fff;
   margin-bottom: 30px;
 }
 
-.team-boxed .item .name {
+.team-boxed .person .name {
   font-weight: bold;
   margin-top: 28px;
   margin-bottom: 8px;
   color: inherit;
 }
 
-.team-boxed .item .title {
+.team-boxed .person .title {
   text-transform: uppercase;
   font-weight: bold;
   color: #d0d0d0;
@@ -98,13 +224,13 @@ body{
   font-size: 13px;
 }
 
-.team-boxed .item .description {
+.team-boxed .person .description {
   font-size: 15px;
   margin-top: 15px;
   margin-bottom: 20px;
 }
 
-.team-boxed .item img {
+.team-boxed .person img {
   max-width: 160px;
 }
 
@@ -123,4 +249,5 @@ body{
 .team-boxed .social a:hover {
   opacity: 1;
 }
+
 
