--- a/static/visit-places/css/slideshow.css
+++ b/static/visit-places/css/slideshow.css
@@ -102,3 +102,14 @@
   color: white;
   
 }
+@media screen and (max-width: 800px){
+  .slideshow {
+    width: 100%; 
+  
+  }  
+     
+  .slideshow-container {
+    width: 700%;
+   }
+  
+  }
