--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -1,449 +1,83 @@
-#home {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  float:left;
-    
-}
-.fa-home {
-  color: red;
-  font-size: 40px;
-  background: transparent;
-  border: none;
-  padding: 15px;
-  border-radius: 30px;
-}
+
 html {
   box-sizing: border-box;
 }
 body{
-    background-color: rgb(212, 209, 209);
+    background-color: aliceblue;
     font-size: x-large;
     padding: none;
     
 }
 .bodyMain {
     background-image: url("earth.jpg");
-    background-color: #c0bbbb;
-    height: 100%;
+    height: 800px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
     margin-top: none;
+    margin-bottom: 50px;
 }
 
-.textSp{
-  width:50%;
-  height: 600px;
-  color: rgb(0, 0, 0);
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textRo{
-  width:50%;
-  height: 600px;
-  color: rgb(7, 7, 7);
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textFl{
-  width:50%;
-  height: 600px;
-  color: rgb(0, 0, 0);
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textIt{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-}
-.textUk{
-  width: 50%;
-  height: 600px;
-  color: rgb(0, 0, 0);
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textNl{
-  width: 50%;
-  height: 600px;
-  color: rgb(0, 0, 0);
-  font-size: larger;
-  text-align: left;
-  overflow: auto;
-}
-.textIr{
-    width: 50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-}
-.header h1{
-    text-align: left;
-    
-    font-size: 50px;
-    font-style: italic;
-    color: rgb(245, 234, 234);
-    margin-bottom: 40px;
-    margin-left: 120px;
-
-}
 .header h2{
     text-align: left;
-    font-size: 50px;
+    font-size: 30px;
     font-style: italic;
     color: rgb(250, 240, 240);
     margin-bottom: 40px;
-    margin-left: 100px;
-    margin-right: 100px;
+    max-width: 70%;
+    margin-left: 15%;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 #slider, #sliderUk, #sliderSp, #sliderNl, #sliderFl, #sliderIt, #sliderIr {
-    border-radius: 300px;
-    z-index: 1;
-    
+    border-radius: 50%; 
 }
-#prev{
-    size: 50px;
-    color: white;
-    background-color: green;
-    z-index: 1;
-    
+.body{  
+  margin-left: 5%;
+  width: 90%;
+  height: 800px;  
+  margin-bottom: 50px;
 }
-#next{
-    size: 80px;
-    color: white;
-    background-color: green;
-    z-index: 1;
-}
+.text{
+  float: right ;
+  height: 80%;
+  width: 40%;
+  overflow: auto;
+}  
 
-a{
-  color: red;
-  font-weight: bold;
-  font-style: italic;
-}
 p{
   text-align: center;
   font-weight: bold;
-  color: rgb(14, 86, 241);
+  color: rgb(24, 25, 26);
 }
-/* for large screens and up */
-@media (min-width: 1300px) {
-  
-  .bodyRo .bodySp .bodyUk .bodyFl .bodyIr .bodyIt .bodyNl {
-    width: 100%;
-    height: 100%;
-    border: 1px solid transparent;
-    position: relative;
-    display: inline-flex;
-        
+.img{
+  float: left;
+  width: 50%;
+  height: 100%;
+}
+
+.prev, .next{
+ float: left;
+  width: 5%;
+  height: 100%;  
+}
+#prev, #next{
+  background-color: green;
+}
+@media screen and (max-width: 1200px){
+  .body{
+    height: 600px;
   }
-  .Romania .Spain  .America  .Italy  {
-    width: 70%;
-    height: auto;
-    line-height: 300px;
-    position: absolute;
-    text-align: center; 
-    z-index: 1;
-     
+}
+@media screen and (max-width: 800px){
+  .body{
+    height: 400px;
   }
-  .Uk .Holland .Ireland {
-    width: 70%;
-    height: auto;
-    line-height: 300px;
-    position: absolute;
-    text-align: center;
-    margin-top: 10px;               
-  }
-  .bodyRo{
-    background-image: url("ro/jpg/romania11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodyUk{
-    background-image: url("uk/jpg/uk11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodySp{
-    background-image: url("ib/jpg/ib11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodyNl{
-    background-image: url("am/jpg/am11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodyFl{
-    background-image: url("fl/jpg/fl11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodyIr{
-    background-image: url("ir/jpg/ir11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
-  }
-  .bodyIt{
-    background-image: url("it/jpg/it11.jpg");
-    height: 700px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    filter: saturate(100%);
+}
+@media screen and (max-width: 1200px){
+  .body{
+    height: 600px;
   }
 }
 
-@media (min-width:601px) {
-  .header h1{
-    margin-left: 100px;
-    
-  }
-  .header h2{
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  .bodyRo{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyUk{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodySp{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyNl{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyFl{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyIr{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyIt{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-
-
-
-  .textSp{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textRo{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textFl{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textIt{
-      width:50%;
-      height: 600px;
-      color: rgb(0, 0, 0);
-      font-size: larger;
-      text-align: left;
-      overflow: auto;
-  }
-  .textUk{
-    width: 50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textNl{
-    width: 50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textIr{
-      width: 50%;
-      height: 600px;
-      color: rgb(0, 0, 0);
-      font-size: larger;
-      text-align: left;
-      overflow: auto;
-  }
-}
-
-@media only screen and (max-width: 600px){
-  .header h1{
-    margin-left: 50px;
-    
-  }
-  .header h2{
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  .bodyRo{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyUk{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodySp{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyNl{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyFl{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyIr{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-  .bodyIt{
-    height: auto;
-    width: auto;
-    background-size: 100% auto;
-    filter: saturate(100%);
-  }
-
-
-
-  .textSp{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textRo{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textFl{
-    width:50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textIt{
-      width:50%;
-      height: 600px;
-      color: rgb(0, 0, 0);
-      font-size: larger;
-      text-align: left;
-      overflow: auto;
-  }
-  .textUk{
-    width: 50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textNl{
-    width: 50%;
-    height: 600px;
-    color: rgb(0, 0, 0);
-    font-size: larger;
-    text-align: left;
-    overflow: auto;
-  }
-  .textIr{
-      width: 50%;
-      height: 600px;
-      color: rgb(0, 0, 0);
-      font-size: larger;
-      text-align: left;
-      overflow: auto;
-  }
-}
 
