--- a/static/index/css/index.css
+++ b/static/index/css/index.css
@@ -28,25 +28,25 @@ a{
 }
 @media screen and (min-width: 601px) {
     #a1 {
-      margin-top: 100px;
-        font-size: 100px;
+        margin-top: 100px;
+        font-size: 10vh;
         font-weight: bold;
         color: white;
-        margin-left: 120px;
+        margin-left: 20%;
         margin-bottom: 40px;
   }
     #a2 {
-       font-size: 100px;
-       font-weight: bold;
+      font-size: 10vh;
+      font-weight: bold;
       color: white;
-      margin-left: 150px;
+      margin-left: 25%;
       margin-bottom: 40px;
     }
     #a3 {
-        font-size: 100px;
+        font-size: 10vh;
         font-weight: bold;
         color: white;
-        margin-left: 180px;
+        margin-left: 30%;
         margin-bottom: 80px;
     }
     .links {
@@ -66,27 +66,27 @@ a{
 }
 @media screen and (max-width: 600px) {
   #a1{
-      font-size: 40px;
+      margin-top: 50px;
+      font-size: 8vh;
       font-weight: bold;
-      color: white;
-      
-      margin-left: 40px;
+      color: white;      
+      margin-left: 20%;
       margin-bottom: 10px;
 }
   #a2{
-     font-size: 40px;
+     font-size: 8vh;
      font-weight: bold;
     color: white;
-    margin-top: 50px;
-    margin-left: 50px;
+    margin-top: 30px;
+    margin-left: 25%;
     margin-bottom: 10px;
   }
   #a3{
-      font-size: 40px;
+      font-size: 8vh;
       font-weight: bold;
       color: white;
-      margin-left: 60px;
-      margin-top: 50px;
+      margin-left: 30%;
+      margin-top: 30px;
       margin-bottom: 30px;
   }
   .links {
