--- a/static/about/css/about.css
+++ b/static/about/css/about.css
@@ -1,9 +1,9 @@
 body{
-    background-color: aliceblue;
-
+    background-color: #A3C6C4  ;
+    color: white;
 }
 p{
-    font-size: 30px;
+    font-size: 40px;
     margin-left: 15%;
     letter-spacing: 2px;
     line-height: 1.2;
@@ -24,7 +24,7 @@ p{
     letter-spacing: 2px;
     line-height: 1.2;
     margin-top: 100px;
-    font-size: 20px;
+    font-size: 30px;
 }
 #learning{
     margin-bottom: 100px;
@@ -34,6 +34,9 @@ p{
     margin-top: 10%;
     margin-bottom: 3%;
     
+}
+a{
+    color: #554f02;
 }
 
   
