--- a/static/game/css/game.css
+++ b/static/game/css/game.css
@@ -1,8 +1,10 @@
 
 body{
-  background-color: aliceblue;
+  background-color: #A3C6C4 ;
   width: 100%;
+  color: rgb(2, 2, 2);
 }
+
 #image{
   margin-top: 50px;
   margin-bottom: 50px;
@@ -22,8 +24,9 @@ body{
   font-size: 50px;
   padding-top: 50px;
   text-align: center;
-  color: rgb(243, 181, 181);
+  color: rgb(3, 3, 3);
   font-weight: bold;
+  margin-bottom: 40px;
 }
 #title{
   font-weight: bold;
