--- a/static/visit-places/css/visit-places.css
+++ b/static/visit-places/css/visit-places.css
@@ -3,7 +3,7 @@ html {
   box-sizing: border-box;
 }
 body{
-    background-color: aliceblue;
+    background-color: #6C7A89 ;
     font-size: x-large;
     padding: none;
     
@@ -22,7 +22,7 @@ body{
     text-align: left;
     font-size: 30px;
     font-style: italic;
-    color: rgb(250, 240, 240);
+    color: rgb(250, 250, 250);
     margin-bottom: 40px;
     max-width: 70%;
     margin-left: 15%;
@@ -43,12 +43,18 @@ body{
   height: 80%;
   width: 40%;
   overflow: auto;
+  color: rgb(255, 255, 255);
 }  
+.body a{
+  color: white;
+  font-style: italic;
+ float: right;
+}
 
 p{
   text-align: center;
   font-weight: bold;
-  color: rgb(24, 25, 26);
+  color: rgb(255, 255, 255);
 }
 .img{
   float: left;
@@ -62,7 +68,7 @@ p{
   height: 100%;  
 }
 #prev, #next{
-  background-color: green;
+  background-color: rgb(111, 250, 111);
 }
 @media screen and (max-width: 1200px){
   .body{
