--- a/static/about/css/about.css
+++ b/static/about/css/about.css
@@ -1,15 +1,20 @@
 body{
-    background-color: #A3C6C4  ;
-    color: white;
+    background-color: #354649;   
+    display: block;
 }
+*{
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+
 p{
-    font-size: 40px;
-    margin-left: 15%;
+    font-size: 50px;
+    text-align: center;
     letter-spacing: 2px;
     line-height: 1.2;
     margin-top: 100px;
     font-weight: bold;
-    margin-bottom: 5%;
+    margin-bottom: 30px;
 }
 
 #modules{
@@ -30,13 +35,43 @@ p{
     margin-bottom: 100px;
 }
 #myself{
-    margin-left: 25%;
-    margin-top: 10%;
+    text-align: center;
+}
+#myself img{
+    border-radius: 20%;
+    margin-top: 10px;
     margin-bottom: 3%;
+    height: 390px;
+    width: 290px;
     
 }
+#introduction p, #education p, #hobbies p, #learning p{
+    font-size: 40px;
+    text-align: center;
+    color: #56c6c6;
+}
 a{
-    color: #554f02;
+    color: rgb(178, 228, 235);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+}
+@media screen and (max-width: 770px){
+    #introduction p, #education p, #hobbies p, #learning p{
+        font-size: 30px;
+    }
+    p{
+        font-size: 40px;
+    }
+    #introduction, #education, #hobbies, #learning{
+    font-size: 20px;
+    }
+    #myself img{
+        border-radius: 20%;
+        margin-top: 10px;
+        margin-bottom: 3%;
+        height: 330px;
+        width: 230px;
+        
+    }
 }
 
   
