--- a/static/about/css/about.css
+++ b/static/about/css/about.css
@@ -3,7 +3,7 @@ body{
     color: white;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     width: 98vw;
-    height: 100vh;    
+    height: 97vh;    
 
 }
 .container{
@@ -67,6 +67,9 @@ p{
 }
 a{
     color: #56c6c6
+}
+::-webkit-scrollbar {
+    display: none;
 }
 @media screen and (max-width: 700px) {
     .vertical-nav {
